k8s/k8s-deployment-example/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-1
spec:
  type: ClusterIP
  selector:
    app: nginx1
  ports:
    - port: 80
      targetPort: 80
