k8s/k8s-deployment-example/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-2
spec:
  type: ClusterIP
  selector:
    app: nginx2
  ports:
    - port: 80
      targetPort: 80
